<resources>
    <string name="app_name">Flickrr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- login activity-->
    <string name="login_policy">By continuing, you agree to our Terms of Service and have read our Privacy Policy.</string>
    <string name="character_requirement">12 or more characters</string>
    <string name="space_requirement">No leading spaces</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fname">First name</string>
    <string name="prompt_lname">Last name</string>
    <string name="prompt_dob">Date of birth</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_flickr_member">Not a Flickr member?</string>
    <string name="already_flickr_member">Already a Flickr member?</string>
</resources>