<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignupFragment"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="45dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_marginStart="-5dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:src="@drawable/flickr_icon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_help_outline_24"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        app:endIconMode="clear_text"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxSignup1"
        android:buttonTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/character_requirement"
        android:layout_marginBottom="-20dp"
        android:layout_marginTop="6dp"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxSignup2"
        android:buttonTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:checked="false"
        android:text="@string/space_requirement"
        android:layout_marginBottom="-25dp"
        />


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="Sign up"
        android:textColor="@color/white"
        android:enabled="false"
        android:alpha="0.3"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_blue"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signupBottomLayout"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="35dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/login_policy"
            android:textAlignment="center"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/signupBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_flickr_member"
                android:textSize="16sp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:padding="5dp"
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:textSize="16sp"
                android:textColor="@color/light_blue"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>